Let the build now uniformly require Java 17
and simplify GitHub Workflows